--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,12 @@ table {
 #place-details {
     margin-left:20%;
     width : 60%;
+    height:50%;
     border: 1px solid black;
     border-collapse: collapse;
     margin-top: 100px;
+    overflow:hidden; 
+    zoom: 1;
 }
 #place-details-left {
     width:50%;
@@ -34,4 +37,30 @@ table {
 }
 .edit-details {
     margin-top:10px;
+}
+.edit-property-details {
+    margin-top:10px;
+    overflow:hidden; 
+    zoom: 1;
+    margin-left:20%;
+    width : 60%;
+    height:50%;
+    border: 1px solid black;
+}
+.clear-both {
+   clear: both;
+}
+.map-fix {
+    height:150px;
+    width:180px;
+    margin-top:5px;
+}
+
+.property-info {
+    
+}
+.edit-control-btn {
+    float : left;
+    border: 1px solid black;
+    width:100%;
 }
