--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ th, td {
 table {
     width :100%;
 }
-#place-list {
+.place-list {
     margin-left:20%;
     width : 60%;
 }
@@ -39,7 +39,7 @@ table {
     margin-top:10px;
 }
 .edit-property-details {
-    margin-top:10px;
+    margin-top:50px;
     overflow:hidden; 
     zoom: 1;
     margin-left:20%;
